feat(auth): add register API with email OTP verification

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,13 @@ phankhanh.jwt.base64-secret=Ka/LNKfU8PllmjB0pdXWBkFXxZDQhRFkouTiBVwCzdqvCW4mrYeZ
 ##expiration
 phankhanh.jwt.access-token-validity-in-seconds=8640000
 phankhanh.jwt.refresh-token-validity-in-seconds=8640000
+
+#config email with Gmail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=phankhanhjr@gmail.com
+
+#thay app password c?a b?n vào ?ây
+spring.mail.password=nvfuypsnmszwpgqk
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
