feat(address): add CRUD for user addresses with default selection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,10 +19,10 @@ phankhanh.jwt.refresh-token-validity-in-seconds=604800
 #config email with Gmail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=phankhanhjr@gmail.com
+spring.mail.username=announcements.pkbooks@gmail.com
 
-#thay app password c?a b?n vào ?ây
-spring.mail.password=nvfuypsnmszwpgqk
+#app password
+spring.mail.password=rnxyoxtvfnyidagm
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
