feat(up-load): config upload image with firebase

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 ##cookie
 phankhanh.app.prod:false
+
+##firebase config
+GOOGLE_APPLICATION_CREDENTIALS = /home/phankhanh/Downloads/book-store-12476-firebase-adminsdk-fbsvc-911469125d.json
+app.firebase.bucket=book-store-12476.appspot.com
