--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,4 +31,4 @@ phankhanh.app.prod:false
 
 ##firebase config
 GOOGLE_APPLICATION_CREDENTIALS = /home/phankhanh/Downloads/book-store-12476-firebase-adminsdk-fbsvc-911469125d.json
-app.firebase.bucket=book-store-12476.appspot.com
+app.firebase.bucket=book-store-12476.firebasestorage.app
