--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,10 @@ phankhanh.app.prod:false
 ##firebase config
 GOOGLE_APPLICATION_CREDENTIALS = /home/phankhanh/Downloads/book-store-12476-firebase-adminsdk-fbsvc-911469125d.json
 app.firebase.bucket=book-store-12476.firebasestorage.app
+
+##vnpay config
+vnpay.tmnCode=UBZRFEFX
+vnpay.hashSecret=CP6YACHKTKO03K2W9Z9MJI6SW2Y4OXC1
+vnpay.payUrl=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+vnpay.returnUrl=https://8e3744afbfa6.ngrok-free.app/payment/vnpay/return
+vnpay.ipnUrl=https://b81af9d7929a.ngrok-free.app/api/v1/payments/vnpay/ipn
